2008-08-26  Sebastien Pouliot  <sebastien@ximian.com>

	* ImplementGenericCollectionInterfacesTest.cs: Move to Design.Generic
	* Test.Rules.Design.mdp, Tests.Rules.Design.csproj: Update

2008-08-06  Peter Johanson  <peter@peterjohanson.com>

	* AvoidPublicInstanceFieldsTest.cs: Test nested types
	with various visibilities. The rule does not apply
	to private or internal nested types.

2008-08-02  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderConvertingFieldToNullableTest.cs: Add test case for
	FX version (Initialize check) and a few others to complete coverage.
	* ImplementGenericCollectionInterfacesTest.cs: Change FX version 
	test case to check Initialize (not CheckType) method.

2008-07-23  Nestor Salceda  <nestor.salceda@gmail.com>

	* ConsiderUsingStaticTypeTest.cs: Fix the existing tests because they
	are a bit confusing.  This new tests removes several false positives.

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidMultidimensionalIndexerTest.cs: New. Unit tests for 
	AvoidMultidimensionalIndexerRule.
	* PreferIntegerOrStringForIndexersTest.cs: New. Unit tests for 
	PreferIntegerOrStringForIndexersRule.
	* Test.Rules.Design.mdp: Add tests to MD project file.

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRefAndOutParametersTest.cs: New. Unit tests for 
	AvoidRefAndOutParametersRule.
	* Test.Rules.Design.mdp: Add tests to MD project file.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderUsingStaticTypeTest.cs: New. Unit tests for 
	ConsiderUsingStaticTypeRule.

2008-06-08  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidVisibleNestedTypesTest.cs: New. Unit tests for 
	AvoidVisibleNestedTypesRule.
	* Test.Rules.Design.mdp: Add tests to MD project file.

2008-05-04  Sebastien Pouliot  <sebastien@ximian.com>

	* UsingCloneWithoutImplementingICloneableTest.cs: Update test
	cases to new format. Change expected result when Clone does not 
	return System.Object.
