@@ -1,3 +1,9 @@
+2008-09-15  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* DisposableFieldsShouldBeDisposedTest.cs: Add two ignored test
+	cases where the Dispose calls are done by anonymous delegates. Also
+	converted tests to the new, shorter, syntax.
+
 2008-08-26  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* ImplementGenericCollectionInterfacesTest.cs: Move to Design.Generic
